k8s-a-to-z/dear-comrade/dear-comrade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dear-comrade-deployment
  labels:
    app: dear-comrade
spec:
  selector:
    matchLabels:
      app: dear-comrade
  template:
    metadata:
      labels:
        app: dear-comrade
    spec:
      containers:
        - name: dear-comrade
          image: dasari508201/dear-comrade-service:0.0.0.1
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: dear-comrade-service
spec:
  selector:
    app: dear-comrade
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
      nodePort: 30008
