k8s-a-to-z/dear-comrade/dear-comrade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dear-comrade-ingress
  labels:
    name: dear-comrade
spec:
  rules:
    - host: dearcomrade.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dear-comrade-service
                port:
                  number: 8084
